--- a/polybar/config.ini
+++ b/polybar/config.ini
@@ -1,5 +1,3 @@
-#Polybar
-
 [colors]
 background = #23283B
 background-alt = #424868
@@ -13,165 +11,102 @@ disabled = #FE9E64
 margin-bottom = 0
 margin-top = 0
 
-[bar/bar1]
-width = 21%
+[bar/powermenu]
+width = 51
 height = 27pt
 radius = 15
-fixed-center = true
-override-redirect = true
 wm-restack = bspwm
-offset-x = 60 
-offset-y = 4
+offset-x = 13
+offset-y = 9
 background = ${colors.background}
 foreground = ${colors.foreground}
-line-size = 3pt
-border-size = 4pt
-border-color = #00000000
+font-0 = NotoSansMono Nerd Font:style=Regular:size=22;4
+modules-center = arch       
+cursor-click = pointer                                                                   cursor-scroll = ns-resize
+
+[bar/timespace]
+wm-restack = bspwm
+override-redirect = true
+width = 390
+height = 27pt
+radius = 15
+fixed-center = false
+offset-x = 73
+offset-y = 9
+background = ${colors.background}
+foreground = ${colors.foreground}
 padding-left = 1
 module-margin = 1
-separator = ""
-separator-foreground = ${colors.disabled}
-
 font-0 = NotoSansMono Nerd Font:style=Regular:size=13;3
-font-1 = Font Awesome 6 Brands Regular:style=Regular:size=11;5
-font-2 = Font Awesome 6 Free Solid:style=Solid:size=11;5
-
 modules-left = date xworkspaces
+cursor-click = pointer
+cursor-scroll = ns-resize
+
+[bar/playerctl]
+width = 276
+height = 27pt
+radius = 15
+wm-restack = bspwm
+offset-x = 675
+offset-y = 9
+background = ${colors.background}
+foreground = ${colors.foreground}
+font-0 = NotoSansMono Nerd Font:style=Regular:size=13;4
+modules-left = playerctl                                                                 module-margin = 8
+cursor-click = pointer                                                                   cursor-scroll = ns-resize
+enable-ipc = true
+
+[bar/net]
+#width = 245
+width = 205
+height = 27pt
+radius = 15
+override-redirect = true
+wm-restack = bspwm
+#offset-x = 1215
+offset-x = 1257
+offset-y = 9
+background = ${colors.background}
+foreground = ${colors.foreground}
+font-0 = NotoSansMono Nerd Font:style=Regular:size=13;3
+modules-right = scroll
 cursor-click = pointer
 cursor-scroll = ns-resize
 border-bottom-size = 0
 
-[bar/bar2]
-width = 23%
+[bar/sysinfo]
+width = 430
 height = 27pt
 radius = 15
 fixed-center = true
 override-redirect = true
 wm-restack = bspwm
 offset-x = 1470 
-offset-y = 4
+offset-y = 9
 background = ${colors.background}
 foreground = ${colors.foreground}
-line-size = 3pt
-border-size = 4pt
-border-color = #00000000
-padding-left = 2
+padding-left = 1
 module-margin = 1
 separator = ""
 separator-foreground = ${colors.disabled}
-
 font-0 = NotoSansMono Nerd Font:style=Regular:size=13;3
-font-1 = Font Awesome 6 Brands Regular:style=Regular:size=11;5
-font-2 = Font Awesome 6 Free Solid:style=Solid:size=11;5
-
-modules-left = backlight pavolume filesystem memory cpu battery
-modules-right = 
-#modules-center = backlight pavolume filesystem memory cpu battery
-
-cursor-click = pointer
-cursor-scroll = ns-resize
-
-border-bottom-size = 0
-
-[bar/bar3]
-width = 14%
-height = 27pt
-radius = 15
-# fixed-center = true
-override-redirect = true
-wm-restack = bspwm
-offset-x = 1200
-offset-y = 4
-background = ${colors.background}
-foreground = ${colors.foreground}
-line-size = 3pt
-border-size = 4pt
-border-color = #00000000
-padding-right = 2
-module-margin = 1
-separator = ""
-separator-foreground = ${colors.disabled}
-
-font-0 = NotoSansMono Nerd Font:style=Regular:size=13;3
-font-1 = Font Awesome 6 Brands Regular:style=Regular:size=11;5
-font-2 = Font Awesome 6 Free Solid:style=Solid:size=11;5
-
-modules-right = scroll
+modules-center = backlight pavolume filesystem memory cpu battery
 cursor-click = pointer
 cursor-scroll = ns-resize
 border-bottom-size = 0
-
-[bar/bar4]
-width = 2.8%
-height = 27pt
-radius = 15
-;override-redirect = true
-wm-restack = bspwm
-offset-x = 5
-offset-y = 4
-background = ${colors.background}
-foreground = ${colors.foreground}
-fixed-center = false
-line-size = 3pt
-border-size = 4pt
-border-color = #00000000
-separator = ""
-separator-foreground = ${colors.disabled}
-
-font-0 = NotoSansMono Nerd Font:style=Regular:size=22;4
-font-1 = Font Logos:size=30;3
-
-modules-right = arch                                                                           
-padding-right = 0
-module-margin = 8
-cursor-click = pointer                                                                           
-cursor-scroll = ns-resize
-border-bottom-size = 0
-
-[bar/bar5]
-width = 250
-height = 27pt
-radius = 15
-;override-redirect = true
-wm-restack = bspwm
-offset-x = 675
-offset-y = 4
-background = ${colors.background}
-foreground = ${colors.foreground}
-fixed-center = false
-line-size = 3pt
-border-size = 4pt
-border-color = #00000000
-separator = ""
-separator-foreground = ${colors.disabled}
-
-font-0 = NotoSansMono Nerd Font:style=Regular:size=13;4
-font-1 = Font Logos:size=30;3
-
-modules-left = playerctl                                                                           
-padding-right = 0
-module-margin = 8
-cursor-click = pointer                                                                           
-cursor-scroll = ns-resize
-enable-ipc = true
-border-bottom-size = 0
-
 
 [module/arch]
 type = custom/text
-content = %{T6} %{T-}
+content = %{O4} %{O-1pt}
 content-arch-margin = 1
-click-left = /$HOME/.local/bin/powermenu.sh
+click-left = /home/narmis/.local/bin/powermenu.sh
 
 [module/xworkspaces]
 type = internal/xworkspaces
-
 icon-default =  
 pin-workspaces = true
 label-active = 
 label-active-foreground = ${colors.primary}
-#label-active-background = ${colors.background-alt}
-#label-active-underline= ${colors.primary}
 label-active-padding = 1
 label-occupied = %icon%
 label-occupied-padding = 1
@@ -190,7 +125,6 @@ mount-0 = /
 format-mounted-prefix = " "
 format-mounted-prefix-foreground = ${colors.primary}
 label-mounted = %percentage_used%%
-#label-mounted = %{F#F0C674}%mountpoint%%{F-} %percentage_used%%
 label-unmounted = %mountpoint% not mounted
 label-unmounted-foreground = ${colors.disabled}
 
@@ -214,7 +148,6 @@ interval = 1
 date = %l:%M
 date-alt = %Y-%m-%d %H:%M:%S
 label = %date%
-#label-foreground = ${colors.primary}
 
 [module/battery]
 type = internal/battery
@@ -259,35 +192,26 @@ ramp-volume-2 =                 
 type = internal/backlight
 card = intel_backlight
 format = <ramp> <label>
-format-padding = 0
 label = %percentage%%
 ramp-0 = 
 ramp-1 = 
 ramp-2 = 
 ramp-foreground = ${colors.primary}
 
-[network-base]
-type = internal/network
-interval = 5
-
-[module/wlan]
-inherit = network-base
-interface-type = wireless
-label-connected = %essid% %{F#F7758D}%local_ip%
-label-connected-foreground = ${colors.primary}
-
 [module/scroll]
 type = custom/script
 tail = true
 interval = 1
-format-prefix = "  "
+format-prefix = " "
 format = <label>
 label-padding = 1
-exec = ~/Desktop/zscroll/polybar-net-scroll.sh
+exec = ~/Desktop/zscroll/net-scroll.sh
+click-left = ~/.local/bin/rofi-wifi-menu.sh
 
 [module/playerctl]
 type = custom/script
-exec = /$HOME/.local/bin/player.sh
+exec = ~/.local/bin/playerctl.sh
+format = <label>
 interval = 0.5
 
 [settings]
