Fixed naming error

--- a/polybar/config.ini
+++ b/polybar/config.ini
@@ -99,7 +99,7 @@ border-bottom-size = 0
 type = custom/text
 content = %{O4} %{O-1pt}
 content-arch-margin = 1
-click-left = /home/narmis/.local/bin/powermenu.sh
+click-left = ~/.local/bin/powermenu.sh
 
 [module/xworkspaces]
 type = internal/xworkspaces
