--- a/polybar/config.ini
+++ b/polybar/config.ini
@@ -1,5 +1,5 @@
 [colors]
-background = #23283B
+background = #1e1e2e
 background-alt = #424868
 foreground = #F7758D
 primary = #7DCFFF
@@ -12,46 +12,46 @@ margin-bottom = 0
 margin-top = 0
 
 [bar/powermenu]
-width = 51
-height = 27pt
+width = 43
+height = 25pt
 radius = 15
 wm-restack = bspwm
 offset-x = 13
 offset-y = 9
 background = ${colors.background}
 foreground = ${colors.foreground}
-font-0 = NotoSansMono Nerd Font:style=Regular:size=22;4
-modules-center = arch       
+font-0 = Iosevka Nerd Font:style=Regular:size=18;3
+modules-center = arch
 cursor-click = pointer                                                                   cursor-scroll = ns-resize
 
 [bar/timespace]
 wm-restack = bspwm
 override-redirect = true
-width = 390
-height = 27pt
+width = 310
+height = 25pt
 radius = 15
 fixed-center = false
-offset-x = 73
+offset-x = 65
 offset-y = 9
 background = ${colors.background}
 foreground = ${colors.foreground}
-padding-left = 1
-module-margin = 1
-font-0 = NotoSansMono Nerd Font:style=Regular:size=13;3
+padding-left = 0
+module-margin = 0
+font-0 = Iosevka Nerd Font:style=Regular:size=12;4
 modules-left = date xworkspaces
 cursor-click = pointer
 cursor-scroll = ns-resize
 
 [bar/playerctl]
 width = 276
-height = 27pt
+height = 25pt
 radius = 15
 wm-restack = bspwm
 offset-x = 675
 offset-y = 9
 background = ${colors.background}
 foreground = ${colors.foreground}
-font-0 = NotoSansMono Nerd Font:style=Regular:size=13;4
+font-0 = Iosevka Term,Iosevka Nerd Font:style=Regular:size=12;4
 modules-left = playerctl                                                                 module-margin = 8
 cursor-click = pointer                                                                   cursor-scroll = ns-resize
 enable-ipc = true
@@ -59,7 +59,7 @@ enable-ipc = true
 [bar/net]
 #width = 245
 width = 205
-height = 27pt
+height = 25pt
 radius = 15
 override-redirect = true
 wm-restack = bspwm
@@ -68,20 +68,21 @@ offset-x = 1257
 offset-y = 9
 background = ${colors.background}
 foreground = ${colors.foreground}
-font-0 = NotoSansMono Nerd Font:style=Regular:size=13;3
-modules-right = scroll
+#font-2 = Iosevka Term,Iosevka Nerd Font:style=Regular:size=12;3
+font-0 = DejaVu Sans Mono wifi ramp:style=wifi-ramp:size=13;3
+modules-right = network
 cursor-click = pointer
 cursor-scroll = ns-resize
 border-bottom-size = 0
 
 [bar/sysinfo]
-width = 430
-height = 27pt
+width = 350
+height = 25pt
 radius = 15
 fixed-center = true
 override-redirect = true
 wm-restack = bspwm
-offset-x = 1470 
+offset-x = 1560 
 offset-y = 9
 background = ${colors.background}
 foreground = ${colors.foreground}
@@ -89,7 +90,7 @@ padding-left = 1
 module-margin = 1
 separator = ""
 separator-foreground = ${colors.disabled}
-font-0 = NotoSansMono Nerd Font:style=Regular:size=13;3
+font-0 = Iosevka Term,Iosevka Nerd Font:style=Regular:size=12;3
 modules-center = backlight pavolume filesystem memory cpu battery
 cursor-click = pointer
 cursor-scroll = ns-resize
@@ -97,9 +98,9 @@ border-bottom-size = 0
 
 [module/arch]
 type = custom/text
-content = %{O4} %{O-1pt}
-content-arch-margin = 1
-click-left = ~/.local/bin/powermenu.sh
+content = %{O1} %{O-1pt}
+content-margin = 0
+click-left = ~/.local/bin/scripts/powermenu.sh
 
 [module/xworkspaces]
 type = internal/xworkspaces
@@ -148,6 +149,7 @@ interval = 1
 date = %l:%M
 date-alt = %Y-%m-%d %H:%M:%S
 label = %date%
+label-margin = 1
 
 [module/battery]
 type = internal/battery
@@ -190,7 +192,7 @@ ramp-volume-2 =                 
 
 [module/backlight]
 type = internal/backlight
-card = intel_backlight
+card = nvidia_wmi_ec_backlight
 format = <ramp> <label>
 label = %percentage%%
 ramp-0 = 
@@ -198,19 +200,40 @@ ramp-1 = 
 ramp-2 = 
 ramp-foreground = ${colors.primary}
 
-[module/scroll]
-type = custom/script
-tail = true
-interval = 1
-format-prefix = " "
-format = <label>
-label-padding = 1
-exec = ~/Desktop/zscroll/net-scroll.sh
-click-left = ~/.local/bin/rofi-wifi-menu.sh
+#[module/scroll]
+#type = custom/script
+#tail = true
+#interval = 1
+#format-prefix = " "
+#format = <label>
+#label-padding = 1
+#exec = ~/.local/bin/scripts/net-scroll.sh
+#click-left = ~/.local/bin/scripts/rofi-wifi-menu.sh
+
+[module/network]
+type = internal/network
+interface =  wlan04
+
+interval = 1.0
+accumulate-stats = true
+unknown-as-up = true
+
+label-connected = %essid%  %downspeed:9%
+label-disconnected = 
+
+format-connected = <ramp-signal> <label-connected>
+format-disconnected = <label-disconnected>
+
+ramp-signal-0 = 
+ramp-signal-1 = 
+ramp-signal-2 = 
+ramp-signal-3 = 
+ramp-signal-4 = 
+ramp-signal-5 = 
 
 [module/playerctl]
 type = custom/script
-exec = ~/.local/bin/playerctl.sh
+exec = ~/.local/bin/scripts/playerctl.sh
 format = <label>
 interval = 0.5
 
