--- a/polybar/config.ini
+++ b/polybar/config.ini
@@ -22,7 +22,8 @@ background = ${colors.background}
 foreground = ${colors.foreground}
 font-0 = Iosevka Nerd Font:style=Regular:size=18;3
 modules-center = arch
-cursor-click = pointer                                                                   cursor-scroll = ns-resize
+cursor-click = pointer                                                                  
+cursor-scroll = ns-resize
 
 [bar/timespace]
 wm-restack = bspwm
@@ -51,9 +52,11 @@ offset-x = 675
 offset-y = 9
 background = ${colors.background}
 foreground = ${colors.foreground}
-font-0 = Iosevka Term,Iosevka Nerd Font:style=Regular:size=12;4
-modules-left = playerctl                                                                 module-margin = 8
-cursor-click = pointer                                                                   cursor-scroll = ns-resize
+font-0 = Iosevka Nerd Font:style=Regular:size=10;3
+modules-left = playerctl
+module-margin = 8
+cursor-click = pointer
+cursor-scroll = ns-resize
 enable-ipc = true
 
 [bar/net]
@@ -90,7 +93,7 @@ padding-left = 1
 module-margin = 1
 separator = ""
 separator-foreground = ${colors.disabled}
-font-0 = Iosevka Term,Iosevka Nerd Font:style=Regular:size=12;3
+font-0 = Iosevka Nerd Font:style=Regular:size=12;3
 modules-center = backlight pavolume filesystem memory cpu battery
 cursor-click = pointer
 cursor-scroll = ns-resize
