changed polybar sizes and added pydexcom bar

--- a/polybar/config.ini
+++ b/polybar/config.ini
@@ -6,6 +6,9 @@ primary = #7DCFFF
 secondary = #8ABEB7
 alert = #A54242
 disabled = #FE9E64
+red = #DB7D97
+orange = #D0885D
+blue = #7BA2E1
 
 [global/wm]
 margin-bottom = 0
@@ -24,6 +27,8 @@ font-0 = Iosevka Nerd Font:style=Regular:size=18;3
 modules-center = arch
 cursor-click = pointer                                                                  
 cursor-scroll = ns-resize
+border-size = 2.5
+border-color = ${colors.orange}
 
 [bar/timespace]
 wm-restack = bspwm
@@ -42,13 +47,15 @@ font-0 = Iosevka Nerd Font:style=Regular:size=12;4
 modules-left = date xworkspaces
 cursor-click = pointer
 cursor-scroll = ns-resize
+border-size = 2.5
+border-color = ${colors.orange}
 
 [bar/playerctl]
-width = 276
+width = 280
 height = 25pt
 radius = 15
 wm-restack = bspwm
-offset-x = 675
+offset-x = 688
 offset-y = 9
 background = ${colors.background}
 foreground = ${colors.foreground}
@@ -58,25 +65,48 @@ module-margin = 8
 cursor-click = pointer
 cursor-scroll = ns-resize
 enable-ipc = true
+border-size = 2.5
+border-color = ${colors.orange}
+
+[bar/dexcom]
+width = 65
+height = 25pt
+radius = 15
+wm-restack = bspwm
+offset-x = 1255
+offset-y = 9
+background = ${colors.background}
+foreground = ${colors.foreground}
+font-0 = Iosevka Nerd Font:style=Regular:size=10;3
+modules-center = dexcom
+module-margin = 8
+cursor-click = pointer
+cursor-scroll = ns-resize
+border-size = 2.5
+border-color = ${colors.orange}
+click-left = firefox --new-window https://my-nightscout-cgm.herokuapp.com/
 
 [bar/net]
 #width = 245
-width = 205
+width = 215
 height = 25pt
 radius = 15
 override-redirect = true
 wm-restack = bspwm
 #offset-x = 1215
-offset-x = 1257
+offset-x = 1330
 offset-y = 9
 background = ${colors.background}
 foreground = ${colors.foreground}
-#font-2 = Iosevka Term,Iosevka Nerd Font:style=Regular:size=12;3
-font-0 = DejaVu Sans Mono wifi ramp:style=wifi-ramp:size=13;3
-modules-right = network
+font-0 = Iosevka Nerd Font:style=Regular:size=10;3
+#font-0 = DejaVuSansMono Nerd Font:size=9
+font-1 =  DejaVuSansMono Nerd Font:size=15;2
+font-2 = DejaVu Sans Mono wifi ramp:size=15;2
+modules-center = network
 cursor-click = pointer
 cursor-scroll = ns-resize
-border-bottom-size = 0
+border-size = 2.5
+border-color = ${colors.orange}
 
 [bar/sysinfo]
 width = 350
@@ -85,7 +115,7 @@ radius = 15
 fixed-center = true
 override-redirect = true
 wm-restack = bspwm
-offset-x = 1560 
+offset-x = 1554
 offset-y = 9
 background = ${colors.background}
 foreground = ${colors.foreground}
@@ -97,7 +127,8 @@ font-0 = Iosevka Nerd Font:style=Regular:size=12;3
 modules-center = backlight pavolume filesystem memory cpu battery
 cursor-click = pointer
 cursor-scroll = ns-resize
-border-bottom-size = 0
+border-size = 2.5
+border-color = ${colors.orange}
 
 [module/arch]
 type = custom/text
@@ -215,13 +246,13 @@ ramp-foreground = ${colors.primary}
 
 [module/network]
 type = internal/network
-interface =  wlan04
+interface = wlan0
 
 interval = 1.0
 accumulate-stats = true
 unknown-as-up = true
 
-label-connected = %essid%  %downspeed:9%
+label-connected = %local_ip%%downspeed:9%  
 label-disconnected = 
 
 format-connected = <ramp-signal> <label-connected>
@@ -233,12 +264,22 @@ ramp-signal-2 = 
 ramp-signal-3 = 
 ramp-signal-4 = 
 ramp-signal-5 = 
+ramp-signal-foreground = ${colors.primary}
 
 [module/playerctl]
 type = custom/script
 exec = ~/.local/bin/scripts/playerctl.sh
 format = <label>
+label-maxlen = 64
 interval = 0.5
+
+[module/dexcom]
+type = custom/script
+exec = ~/.dotfiles/scripts/dexcom.sh
+format = <label>
+format-prefix =  
+format-prefix-foreground = ${colors.primary}
+interval = 1.0
 
 [settings]
 screenchange-reload = true
