added clickable ncdu and htop icons and removed workspace alert

--- a/polybar/config.ini
+++ b/polybar/config.ini
@@ -55,12 +55,12 @@ width = 280
 height = 25pt
 radius = 15
 wm-restack = bspwm
-offset-x = 688
+offset-x = 723
 offset-y = 9
 background = ${colors.background}
 foreground = ${colors.foreground}
 font-0 = Iosevka Nerd Font:style=Regular:size=10;3
-modules-left = playerctl
+modules-center = playerctl
 module-margin = 8
 cursor-click = pointer
 cursor-scroll = ns-resize
@@ -145,7 +145,7 @@ label-active-padding = 1
 label-occupied = %icon%
 label-occupied-padding = 1
 label-urgent = %icon%
-label-urgent-background = ${colors.alert}
+#label-urgent-background = ${colors.alert}
 label-urgent-padding = 1
 label-empty = %icon%
 label-empty-foreground = ${colors.disabled}
@@ -156,7 +156,7 @@ label-xworkspaces-padding-left = 7
 type = internal/fs
 interval = 25
 mount-0 = /
-format-mounted-prefix = " "
+format-mounted-prefix = %{A1:termite -e ncdu:} %{A}
 format-mounted-prefix-foreground = ${colors.primary}
 label-mounted = %percentage_used%%
 label-unmounted = %mountpoint% not mounted
@@ -165,14 +165,14 @@ label-unmounted-foreground = ${colors.disabled}
 [module/memory]
 type = internal/memory
 interval = 2
-format-prefix = " " 
+format-prefix = " " 
 format-prefix-foreground = ${colors.primary}
 label = %percentage_used:2%%
 
 [module/cpu]
 type = internal/cpu
 interval = 2
-format-prefix = " "
+format-prefix = %{A1:termite -e htop:} %{A}
 format-prefix-foreground = ${colors.primary}
 label = %percentage:2%%
 
@@ -188,7 +188,7 @@ label-margin = 1
 type = internal/battery
 battery = BAT0
 adapter = ADP1
-full-at = 98
+full-at = 100
 format-charging = <animation-charging> <label-charging>
 format-discharging = <ramp-capacity> <label-discharging>
 label-full =  %percentage%
@@ -200,7 +200,6 @@ ramp-capacity-2 = " "
 ramp-capacity-3 = " "
 ramp-capacity-4 = " "
 ramp-capacity-foreground = ${colors.primary}
-
 animation-charging-0 = " "
 animation-charging-1 = " "
 animation-charging-2 = " "
@@ -210,18 +209,18 @@ animation-charging-foreground = ${colors.primary}
 animation-charging-framerate = 750
 
 [module/pavolume]
-type =                          internal/pulseaudio
-;sink =                         alsa_output.pci-0000_00_1f.3.analog-stereo
-use-ui-max =                    true
-interval =                      0
-format-volume =                 <ramp-volume> <label-volume>
-format-muted =                  <label-muted>
+type = internal/pulseaudio
+;sink = alsa_output.pci-0000_00_1f.3.analog-stereo
+use-ui-max = true
+interval = 0
+format-volume = <ramp-volume> <label-volume>
+format-muted = <label-muted>
 ramp-volume-foreground = ${colors.primary}
-label-muted =                   ﱝ
+label-muted = ﱝ
 label-muted-foreground = ${colors.primary}
-ramp-volume-0 =                 
-ramp-volume-1 =                 
-ramp-volume-2 =                 
+ramp-volume-0 = 
+ramp-volume-1 = 
+ramp-volume-2 = 
 
 [module/backlight]
 type = internal/backlight
@@ -236,17 +235,13 @@ ramp-foreground = ${colors.primary}
 [module/network]
 type = internal/network
 interface = wlan0
-
 interval = 1.0
 accumulate-stats = true
 unknown-as-up = true
-
 label-connected = %local_ip%%downspeed:9%  
 label-disconnected = 
-
 format-connected = <ramp-signal> <label-connected>
 format-disconnected = <label-disconnected>
-
 ramp-signal-0 = 
 ramp-signal-1 = 
 ramp-signal-2 = 
