--- a/polybar/config.ini
+++ b/polybar/config.ini
@@ -68,6 +68,24 @@ enable-ipc = true
 border-size = 2.5
 border-color = ${colors.orange}
 
+[bar/cava]
+width = 80
+height = 25pt
+radius = 15
+wm-restack = bspwm
+offset-x = 1011
+offset-y = 9
+background = ${colors.background}
+foreground = ${colors.foreground}
+font-0 = Iosevka Nerd Font:style=Regular:size=10;3
+modules-center = cava
+module-margin = 8
+cursor-click = pointer
+cursor-scroll = ns-resize
+enable-ipc = true
+border-size = 2.5
+border-color = ${colors.orange}
+
 [bar/dexcom]
 width = 65
 height = 25pt
@@ -133,7 +151,7 @@ border-color = ${colors.orange}
 type = custom/text
 content = %{O1} %{O-1pt}
 content-margin = 0
-click-left = ~/.local/bin/scripts/powermenu.sh
+click-left = /home/narmis/.dotfiles/rofi/scripts/power-menu.sh 
 
 [module/xworkspaces]
 type = internal/xworkspaces
@@ -264,6 +282,15 @@ format = <label>
 format-prefix =  
 format-prefix-foreground = ${colors.primary}
 interval = 1.0
+
+[module/cava]
+type = custom/script
+tail = true
+exec = ~/.dotfiles/polybar/scripts/cava.sh
+format = <label>
+label-foreground = ${colors.primary}
+format-font = 5
+label = %output%
 
 [settings]
 screenchange-reload = true
