swapped cpu, mem and disk icons

--- a/polybar/config.ini
+++ b/polybar/config.ini
@@ -174,7 +174,7 @@ label-xworkspaces-padding-left = 7
 type = internal/fs
 interval = 25
 mount-0 = /
-format-mounted-prefix = %{A1:termite -e ncdu:} %{A}
+format-mounted-prefix = %{A1:termite -e ncdu:} %{A}
 format-mounted-prefix-foreground = ${colors.primary}
 label-mounted = %percentage_used%%
 label-unmounted = %mountpoint% not mounted
@@ -183,14 +183,14 @@ label-unmounted-foreground = ${colors.disabled}
 [module/memory]
 type = internal/memory
 interval = 2
-format-prefix = " " 
+format-prefix = " " 
 format-prefix-foreground = ${colors.primary}
 label = %percentage_used:2%%
 
 [module/cpu]
 type = internal/cpu
 interval = 2
-format-prefix = %{A1:termite -e htop:} %{A}
+format-prefix = %{A1:termite -e htop:} %{A}
 format-prefix-foreground = ${colors.primary}
 label = %percentage:2%%
 
