need to fix polybar & tint2 border

--- a/picom/picom.conf
+++ b/picom/picom.conf
@@ -143,16 +143,17 @@ opacity-rule = [ "80:class_g = 'Termite'" ];
 # Sets the radius of rounded window corners. When > 0, the compositor will
 # round the corners of windows. Does not interact well with
 # `transparent-clipping`.
-corner-radius = 7
+#corner-radius = 5
 
 # Exclude conditions for rounded corners.
-rounded-corners-exclude = [
+#rounded-corners-exclude = [
   # "window_type = 'dock'",
   # "window_type = 'desktop'"
-  "class_g = 'polybar'",
-  "class_g = 'tint2'",
+#  "class_g = 'polybar'",
+#  "class_g = 'tint2'",
+#  "class_g = 'bpswm'",
 
-];
+#];
 
 
 #################################
